Closed
Bug 1933008
Opened 12 days ago
Closed 9 days ago
Unused variable in SkFontHost_cairo.cpp - an incorrect declaration in https://searchfox.org/mozilla-central/source/gfx/skia/skia/src/ports/SkFontHost_cairo.cpp#499
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
134 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox132 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | fixed |
People
(Reporter: ishikawa, Assigned: lsalzman, NeedInfo)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
In https://searchfox.org/mozilla-central/source/gfx/skia/skia/src/ports/SkFontHost_cairo.cpp#499
there is a code
bool SkScalerContext_CairoFT::prepareGlyph(FT_GlyphSlot glyph)
{
bool modified = false;
if (fRec.fFlags & SkScalerContext::kEmbolden_Flag) {
// Not FT_GlyphSlot_Embolden because we want a less extreme effect.
mozilla_glyphslot_embolden_less(glyph);
bool modified = true; <---- |bool| here needs to be removed.!!!
}
return modified;
}
The incorrect use of |bool| on the line hides the variable in the surrounding scope.
The code was updated in Bug 1931242.
I looked at https://github.com/google/skia
and was unable to locate SkFontHost_cairo.cpp there.
So maybe this file is only mozilla M-C?
Updated•10 days ago
|
Severity: -- → S3
Flags: needinfo?(lsalzman)
Assignee | ||
Comment 1•10 days ago
|
||
Updated•10 days ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7a59c661a6e4
Fix SkScalerContext_CairoFT::prepareGlyph. r=aosmond
Updated•10 days ago
|
status-firefox132:
--- → unaffected
status-firefox133:
--- → unaffected
status-firefox134:
--- → affected
status-firefox-esr115:
--- → unaffected
status-firefox-esr128:
--- → unaffected
Keywords: regression
Regressed by: 1931242
Updated•10 days ago
|
Summary: Unsed variable in SkFontHost_cairo.cpp - an incorrect declartation in https://searchfox.org/mozilla-central/source/gfx/skia/skia/src/ports/SkFontHost_cairo.cpp#499 → Unused variable in SkFontHost_cairo.cpp - an incorrect declaration in https://searchfox.org/mozilla-central/source/gfx/skia/skia/src/ports/SkFontHost_cairo.cpp#499
Comment 3•9 days ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 9 days ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•