Bug 1933008 - Fix SkScalerContext_CairoFT::prepareGlyph. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D230057